feat: 完成全栈功能与驾驶舱重构